# myQtApp

./: CMakeLists.txt  main.cpp  myApp.pro  zh_CN.ts
orm/: export.h  precompiled.h
src/: resource.qrc  zh_CN.ts
src/common/: menu_bar.cpp  menu_bar.h  status_bar.cpp  status_bar.h
src/db/: user.cpp  user.h
src/i18n/: zh_CN.ts
src/util/: db.cpp  db.h  font_awesome.cpp  font_awesome.h
src/window/login/: LoginWindow.cpp  LoginWindow.h
src/window/main/: MainWindow.cpp  MainWindow.h
